Replace the existing portfolio site with a photography one

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Kelly Munro | Web Developer | Photographer</title>
+    <title>Kelly Munro Photography | Nature, Wildlife and Landscape Photography</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href='http://fonts.googleapis.com/css?family=Dosis|Josefin+Sans|Lobster' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/app.css">
@@ -11,90 +11,46 @@
 
   <body>
     <header>
-        <h1>Kelly Munro</h1>
-        <h2>Web Developer | Photographer</h2>
+      <h1>Kelly Munro Photography</h1>
+      <h2>Nature | Wildlife | Landscape</h2>
     </header>
 
     <div id="content">
-      <section class="site clearfix">
-        <a href="img/photography-site.jpg">
-          <img src="img/photography-site.jpg" alt="Photography site - Javascript, jQuery, Ruby on Rails">
+      <section class="image clearfix">
+        <a href="img/KM-BWRobin.jpg">
+          <img src="img/KM-BWRobin.jpg" alt="North Island Robin or Toutouwai, Petroica longipes.">
         </a>
-        <div class="site-description">
-          <h3>Kelly Munro Photography</h3>
-          <p>A photography portfolio site</p>
-          <p>Javascript, jQuery, Ruby on Rails, RSpec testing, Jasmine testing</p>
-          <p>Github: <a href="https://github.com/kellymdev/photo-site">Github repository</a></p>
-          <p>Visit the site: <a href="http://www.kellymunro.com">Kelly Munro Photography</a></p>
+        <div class="image-description">
+          <h3>North Island Robin</h3>
+          <p>Toutouwai, Petroica longipes</p>
         </div>
       </section>
 
-      <section class="site clearfix">
-        <a href="img/wildlife-site.jpg">
-          <img src="img/wildlife-site.jpg" alt="Wildlife site - Javascript, jQuery, Ruby on Rails">
+      <section class="image clearfix">
+        <a href="img/KM-HookerLake.jpg">
+          <img src="img/KM-HookerLake.jpg" alt="Hooker Lake, Aoraki Mount Cook National Park">
         </a>
-        <div class="site-description">
-          <h3>Wildlife Watching</h3>
-          <p>A site describing wildlife viewing spots around the Wellington region and the species that can be viewed at each location, searchable by Location and Species. The site integrates with the Google Maps api to provide a map for each location.</p>
-          <p>Javascript, jQuery, Ruby on Rails, RSpec testing, Jasmine testing</p>
-          <p>Github: <a href="https://github.com/kellymdev/wildlife">Github repository</a></p>
-          <p>Visit the site: <a href="https://wildlifewatching.herokuapp.com/">Wildlife Watching</a></p>
+        <div class="image-description">
+          <h3>Hooker Lake Reflections</h3>
+          <p>Hooker Valley, Aoraki Mount Cook National Park</p>
         </div>
       </section>
 
-      <section class="site clearfix">
-        <a href="img/petnames.png">
-          <img src="img/petnames.png" alt="Pet Names Site - Javascript, jQuery, Ruby on Rails">
+      <section class="image clearfix">
+        <a href="img/KM-KaitiHill.jpg">
+          <img src="img/KM-KaitiHill.jpg" alt="Kaiti Hill, Gisborne">
         </a>
-        <div class="site-description">
-          <h3>Pet Names</h3>
-          <p>A searchable collection of pet names and their meanings. Names are grouped alphabetically, by colour and by meaning. Random names can also be viewed.</p>
-          <p>Javascript, jQuery, Ruby on Rails (as an api), RSpec testing, Jasmine testing</p>
-          <p>Github: <a href="https://github.com/kellymdev/petnames">Github repository</a></p>
-          <p>Visit the site: <a href="https://petnames.herokuapp.com/">Pet Names</a></p>
-        </div>
-      </section>
-
-      <section class="site clearfix">
-        <a href="img/investorinfo.jpg">
-          <img src="img/investorinfo.jpg" alt="Investor Info Centre - Javascript, Html">
-        </a>
-        <div class="site-description">
-          <h3>Investor Info Centre</h3>
-          <p>An investor information site for the ASX, NASDAQ and NYSE. The site makes three separate API calls to return financial information for the selected stock/share.</p>
-          <p>Javascript, Html, Jasmine testing</p>
-          <p>Github: <a href="https://github.com/kellymdev/investorinfo">Github repository</a></p>
-      </section>
-
-      <section class="site clearfix">
-        <a href="img/acronyms.jpg">
-          <img src="img/acronyms.jpg" alt="IT Acronyms - Ruby on Rails">
-        </a>
-        <div class="site-description">
-          <h3>IT Acronyms</h3>
-          <p>A searchable list of IT acronyms and their definitions</p>
-          <p>Ruby on Rails, RSpec testing, Capybara testing</p>
-          <p>Github: <a href="https://github.com/kellymdev/it-acronyms">Github repository</a></p>
-          <p>Visit the site: <a href="https://acronyms.herokuapp.com/">IT Acronyms</a></p>
-        </div>
-      </section>
-
-      <section class="site clearfix">
-        <a href="img/catstats.jpg">
-          <img src="img/catstats.jpg" alt="Cat Stats - Ruby on Rails">
-        </a>
-        <div class="site-description">
-          <h3>Cat Stats</h3>
-          <p>A cat record site. Cats can be added, viewed, edited and deleted.</p>
-          <p>Ruby on Rails, RSpec testing, Capybara testing</p>
-          <p>Github: <a href="https://github.com/kellymdev/cat_stats">Github repository</a></p>
+        <div class="image-description">
+          <h3>Kaiti Hill</h3>
+          <p>Misty morning from Kaiti Hill, Gisborne</p>
         </div>
       </section>
 
       <footer>
-        <p>Copyright &copy; 2015 <a href="mailto:info@kellymunro.com">Kelly Munro</a>. Images displayed on this site may not be used without written permission.</p>
+        <p>Copyright &copy; 2020 <a href="mailto:info@kellymunro.com">Kelly Munro</a>. Images displayed on this site may not be used without written permission.</p>
       </footer>
     </div>
 
+    <script src="js/app.js"></script>
   </body>
 </html>
